--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -9,7 +9,7 @@
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 2rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -87,7 +87,7 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
+  width: 90%;
 }
 
 .card:hover,
@@ -98,8 +98,8 @@
 }
 
 .card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+  margin:  0;
+  font-size: 1rem;
 }
 
 .card p {
@@ -118,4 +118,8 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.w90{
+  width: 90%!important;
 }
