--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,7 +16,14 @@
   justify-content: center;
   align-items: center;
 }
-
+.link {
+  margin-right: 10px;
+  background: #f4f4f4;
+  border: 1px solid #f2f2f2;
+  padding: 10px;
+  margin-bottom: 10px;
+  display: inline-block;
+}
 .footer {
   width: 100%;
   height: 100px;
@@ -98,7 +105,7 @@
 }
 
 .card h2 {
-  margin:  0;
+  margin: 0;
   font-size: 1rem;
 }
 
@@ -120,6 +127,6 @@
   }
 }
 
-.w90{
-  width: 90%!important;
+.w90 {
+  width: 90% !important;
 }
